hphp/hack/test/typecheck/constraints/tparam_class_method_ambiguous.php.exp
File "tparam_class_method_ambiguous.php", line 17, characters 16-16:
You are trying to access the member f but there is more than one implementation on a value of generic type T (Typing[4161])
  File "tparam_class_method_ambiguous.php", line 16, characters 38-38:
  Check this out
